------------------------------------------------------------------------
r2476 | gaser | 2023-11-10 16:02:32

Changed paths:
MM CHANGES.txt
MM cat_batch_bids.sh
MM cat_batch_cat.sh
MM cat_batch_long.sh
 M cat_progress_bar.m
A  cat_vol_laterality_index.m

Changed: Added some flags to waitbar window in cat_progressbar to prevent 
         unwished popping up of the window.
Added:   New function to calculate laterality index for VBM data.
------------------------------------------------------------------------
r2475 | gaser | 2023-11-10 12:08:18

Changed paths:
 M CHANGES.txt
 M cat_batch_bids.sh
 M cat_batch_cat.sh
 M cat_batch_long.sh

Changed: Small corrections for shell scripts cat_batch*.sh
------------------------------------------------------------------------
r2473 | gaser | 2023-11-10 09:41:11

Changed paths:
 M CHANGES.txt
 M check_pipeline.sh
 M check_pipeline_homogeneity.m

Changed: Updated check_pipeline.sh and added checks for xml-files.
Changed: Added check whether reöease string is empty in check_pipeline_homogeneity.m
------------------------------------------------------------------------
r2472 | rdahnke | 2023-11-09 10:53:16

Changed paths:
 M CHANGES.txt
 M cat_io_rerun.m
 M cat_vol_pbtsimple.m
 M cat_vol_resize.m

1) Changed:  Added new thickness-based correction in cat_vol_pbtsimple to better
             interpretative WM boundary within the GM/WM partial volume range.
2) Fixed:    Corrected bug in cat_vol_resize. 
3) Changed:  Optimised command-line output of cat_io_rerun. 
------------------------------------------------------------------------
r2471 | gaser | 2023-11-08 21:46:48

Changed paths:
 M CHANGES.txt

Changed: Set default surface processing back to 22 (CS2).
Added:   New function to calculate laterality index for volumes.
Fixed:   Corrected error in cat_batch_bids.sh where cat12 folder was not correctly
         defined.
------------------------------------------------------------------------
r2470 | gaser | 2023-11-08 21:43:04
